Clean up porting:   Make sure all modifications to original source files have __LIBRETRO__ and an explanation.   Note that include SDL_net.h and include SDL_thread.h are supposed to be empty.   Move mixer-retro.cpp into the libretro directory.   Add latest changes from official SVN.

--- a/Makefile.libretro
+++ b/Makefile.libretro
@@ -110,7 +110,7 @@ SOURCES = \
     src/hardware/joystick.cpp \
     src/hardware/keyboard.cpp \
     src/hardware/memory.cpp \
-    src/hardware/mixer-retro.cpp \
+    libretro/mixer-retro.cpp \
     src/hardware/pcspeaker.cpp \
     src/hardware/pci_bus.cpp \
     src/hardware/pic.cpp \
