--- a/Makefile.libretro
+++ b/Makefile.libretro
@@ -172,13 +172,14 @@ SOURCES = \
     src/dosbox.cpp \
     src/gui/render.cpp \
     src/gui/render_scalers.cpp \
+    src/gui/midi.cpp \
     libretro/libretro.cpp \
     libretro/dos_gfx.cpp \
     libretro/mapper.cpp \
     libretro/mixer-retro.cpp
 
 OBJECTS    = $(SOURCES:.cpp=.o) libco/libco.o
-LIBS       = -lz -lm
+LIBS       += -lz -lm
 CPPFLAGS   += -D__LIBRETRO__ -DHAVE_LIBZ $(fpic) -iquote include
 
 all: $(TARGET)
