--- a/Makefile.libretro
+++ b/Makefile.libretro
@@ -13,6 +13,8 @@ else ifneq ($(findstring win,$(shell uname -a)),)
 endif
 endif
 
+TARGET_NAME := dosbox
+
 # system platform
 system_platform = unix
 ifeq ($(shell uname -a),)
@@ -25,17 +27,17 @@ else ifneq ($(findstring MINGW,$(shell uname -a)),)
 endif
 
 ifeq ($(platform), unix)
-   TARGET := dosbox_libretro.so
+   TARGET := $(TARGET_NAME)_libretro.so
    LDFLAGS += -shared -Wl,--version-script=libretro/link.T
    
    fpic = -fPIC
 else ifeq ($(platform), osx)
-   TARGET := dosbox_libretro.dylib
+   TARGET := $(TARGET_NAME)_libretro.dylib
    LDFLAGS += -dynamiclib
    
    fpic = -fPIC
 else ifeq ($(platform), ios)
-   TARGET := dosbox_libretro.dylib
+   TARGET := $(TARGET_NAME)_libretro.dylib
    CPPFLAGS += -DCOTHREAD_PTHREAD
    LDFLAGS += -dynamiclib
    fpic = -fPIC
@@ -43,7 +45,7 @@ else ifeq ($(platform), ios)
    CC = clang -arch armv7 -isysroot $(IOSSDK)
    CXX = clang++ -arch armv7 -isysroot $(IOSSDK)
 else ifeq ($(platform), android)
-   TARGET := dosbox_libretro.so
+   TARGET := $(TARGET_NAME)_libretro.so
    CXXFLAGS += -fpermissive 
    LDFLAGS += -shared -Wl,--version-script=libretro/link.T
 
@@ -52,19 +54,19 @@ else ifeq ($(platform), android)
    
    fpic = -fPIC
 else ifeq ($(platform), psp1)
-   TARGET := dosbox_libretro_psp1.a
+   TARGET := $(TARGET_NAME)_libretro_psp1.a
    CC = psp-gcc$(EXE_EXT)
    CXX = psp-g++$(EXE_EXT)
    AR = psp-ar$(EXE_EXT)
    CPPFLAGS += -DPSP -G0
 else ifeq ($(platform), wii)
-   TARGET := dosbox_libretro_wii.a
+   TARGET := $(TARGET_NAME)_libretro_wii.a
    CC = $(DEVKITPPC)/bin/powerpc-eabi-gcc$(EXE_EXT)
    CXX = $(DEVKITPPC)/bin/powerpc-eabi-g++$(EXE_EXT)
    AR = $(DEVKITPPC)/bin/powerpc-eabi-ar$(EXE_EXT)
    CPPFLAGS += -DGEKKO -mrvl -mcpu=750 -meabi -mhard-float -D__POWERPC__ -D__ppc__ -DWORDS_BIGENDIAN=1
 else
-   TARGET := dosbox_retro.dll
+   TARGET := $(TARGET_NAME)_retro.dll
    LDFLAGS += -shared -static-libgcc -static-libstdc++ -Wl,--version-script=libretro/link.T -lwinmm
 endif
 
