(iOS) Standardize target name

--- a/Makefile.libretro
+++ b/Makefile.libretro
@@ -37,7 +37,7 @@ else ifeq ($(platform), osx)
    
    fpic = -fPIC
 else ifeq ($(platform), ios)
-   TARGET := $(TARGET_NAME)_libretro.dylib
+   TARGET := $(TARGET_NAME)_libretro_ios.dylib
    CPPFLAGS += -DCOTHREAD_PTHREAD
    LDFLAGS += -dynamiclib
    fpic = -fPIC
