--- a/Makefile.libretro
+++ b/Makefile.libretro
@@ -35,7 +35,7 @@ else ifeq ($(platform), osx)
    TARGET := $(TARGET_NAME)_libretro.dylib
    LDFLAGS += -dynamiclib
    
-   fpic = -fPIC
+   fpic = -fPIC -mmacosx-version-min=10.6
 else ifeq ($(platform), ios)
    TARGET := $(TARGET_NAME)_libretro_ios.dylib
    CPPFLAGS += -DHAVE_POSIX_MEMALIGN=1 -marm
