--- a/Makefile.libretro
+++ b/Makefile.libretro
@@ -47,15 +47,35 @@ else ifeq ($(platform), osx)
    TARGET := $(TARGET_NAME)_libretro.dylib
    LDFLAGS += -dynamiclib
    
-   fpic = -fPIC -mmacosx-version-min=10.6
+   fpic = -fPIC
+	ifeq ($(arch),ppc)
+		COMMONFLAGS += -DBLARGG_BIG_ENDIAN=1 -D__ppc__
+	endif
+	OSXVER = `sw_vers -productVersion | cut -d. -f 2`
+	OSX_LT_MAVERICKS = `(( $(OSXVER) <= 9)) && echo "YES"`
+	ifeq ($(OSX_LT_MAVERICKS),"YES")
+		fpic += -mmacosx-version-min=10.5
+	endif
 else ifeq ($(platform), ios)
    TARGET := $(TARGET_NAME)_libretro_ios.dylib
    COMMONFLAGS += -DHAVE_POSIX_MEMALIGN=1 -marm
-   LDFLAGS += -dynamiclib
    fpic = -fPIC
+   LDFLAGS += -dynamiclib
+
+	ifeq ($(IOSSDK),)
+		IOSSDK := $(shell xcrun -sdk iphoneos -show-sdk-path)
+	endif
 
    CC = clang -arch armv7 -isysroot $(IOSSDK)
    CXX = clang++ -arch armv7 -isysroot $(IOSSDK)
+	COMMONFLAGS += -DIOS 
+	OSXVER = `sw_vers -productVersion | cut -d. -f 2`
+	OSX_LT_MAVERICKS = `(( $(OSXVER) <= 9)) && echo "YES"`
+	ifeq ($(OSX_LT_MAVERICKS),"YES")
+		CC += -miphoneos-version-min=5.0
+		COMMONFLAGS += -miphoneos-version-min=5.0
+	endif
+
 else ifeq ($(platform), android)
    TARGET := $(TARGET_NAME)_libretro.so
    COMMONFLAGS += -fpermissive 
