--- a/Makefile.libretro
+++ b/Makefile.libretro
@@ -100,6 +100,7 @@ else ifeq ($(platform), wii)
    COMMONFLAGS += -DGEKKO -mrvl -mcpu=750 -meabi -mhard-float -D__POWERPC__ -D__ppc__ -DWORDS_BIGENDIAN=1
 	STATIC_LINKING = 1
 else
+   CXXFLAGS += -mno-ms-bitfields
    TARGET := $(TARGET_NAME)_libretro.dll
    LDFLAGS += -shared -static-libgcc -static-libstdc++ -Wl,--version-script=libretro/link.T -lwinmm
 endif
