--- a/Makefile.libretro
+++ b/Makefile.libretro
@@ -1,4 +1,5 @@
 DEBUG=0
+GIT_VERSION := $(shell git describe --abbrev=4 --dirty --always --tags)
 
 UNAME=$(shell uname -a)
 
@@ -118,7 +119,7 @@ endif
 ifeq ($(DEBUG), 1)
 COMMONFLAGS += -O0 -g
 else
-COMMONFLAGS += -O3 -DNDEBUG
+COMMONFLAGS += -O3 -DNDEBUG -DGIT_VERSION=\"$(GIT_VERSION)\" 
 endif
 
 CORE_DIR    := .
