Universal build for OS X

--- a/Makefile.libretro
+++ b/Makefile.libretro
@@ -56,6 +56,11 @@ else ifeq ($(platform), osx)
 	ifeq ($(OSX_LT_MAVERICKS),"YES")
 		fpic += -mmacosx-version-min=10.5
 	endif
+ifndef ($(UNIVERSAL))
+	CFLAGS += $(ARCHFLAGS)
+	CXXFLAGS += $(ARCHFLAGS)
+	LDFLAGS += $(ARCHFLAGS)
+endif
 else ifeq ($(platform), ios)
    TARGET := $(TARGET_NAME)_libretro_ios.dylib
    COMMONFLAGS += -DHAVE_POSIX_MEMALIGN=1 -marm
