--- a/Makefile.libretro
+++ b/Makefile.libretro
@@ -92,6 +92,15 @@ COMMONFLAGS += -DHAVE_POSIX_MEMALIGN=1 -marm
 include $(THEOS)/makefiles/common.mk
 
 LIBRARY_NAME = $(TARGET_NAME)_libretro_ios
+else ifeq ($(platform), qnx)
+   TARGET := $(TARGET_NAME)_libretro_qnx.so
+   fpic := -fPIC
+   SHARED := -lcpp -lm -shared -Wl,-version-script=link.T
+	CC = qcc -Vgcc_ntoarmv7le
+   CC_AS = qcc -Vgcc_ntoarmv7le
+	CXX = QCC -Vgcc_ntoarmv7le_cpp
+	AR = QCC -Vgcc_ntoarmv7le
+   PLATFORM_DEFINES := -D__BLACKBERRY_QNX__ -fexceptions -marm -mcpu=cortex-a9 -mfpu=neon -mfloat-abi=softfp
 else ifeq ($(platform), android)
    TARGET := $(TARGET_NAME)_libretro.so
    COMMONFLAGS += -fpermissive 
