--- a/Makefile.libretro
+++ b/Makefile.libretro
@@ -69,7 +69,7 @@ else ifeq ($(platform), ios)
    LDFLAGS += -dynamiclib
 
 	ifeq ($(IOSSDK),)
-		IOSSDK := $(shell xcrun -sdk iphoneos -show-sdk-path)
+		IOSSDK := $(shell xcodebuild -version -sdk iphoneos Path)
 	endif
 
    CC = clang -arch armv7 -isysroot $(IOSSDK)
