--- a/Makefile.libretro
+++ b/Makefile.libretro
@@ -108,6 +108,8 @@ else ifeq ($(platform), android)
    CXX = arm-linux-androideabi-g++
    
    fpic = -fPIC
+
+# PSP
 else ifeq ($(platform), psp1)
    TARGET := $(TARGET_NAME)_libretro_psp1.a
    CC = psp-gcc$(EXE_EXT)
@@ -115,6 +117,16 @@ else ifeq ($(platform), psp1)
    AR = psp-ar$(EXE_EXT)
    COMMONFLAGS += -DPSP -G0
 	STATIC_LINKING = 1
+
+# Vita
+else ifeq ($(platform), vita)
+   TARGET := $(TARGET_NAME)_libretro_vita.a
+	CC = arm-vita-eabi-gcc$(EXE_EXT)
+	CXX = arm-vita-eabi-g++$(EXE_EXT)
+	AR = arm-vita-eabi-ar$(EXE_EXT)
+   COMMONFLAGS += -DVITA
+	STATIC_LINKING = 1
+
 else ifeq ($(platform), wii)
    TARGET := $(TARGET_NAME)_libretro_wii.a
    CC = $(DEVKITPPC)/bin/powerpc-eabi-gcc$(EXE_EXT)
