--- a/Makefile.common
+++ b/Makefile.common
@@ -112,9 +112,11 @@ SOURCES_CXX := \
 	$(CORE_DIR)/libretro/mapper.cpp \
 	$(CORE_DIR)/libretro/mixer-retro.cpp
 
-SOURCES_C := \
-	$(CORE_DIR)/libco/libco.c \
-	$(CORE_DIR)/libretro-common/file/retro_dirent.c
+SOURCES_C := $(CORE_DIR)/libco/libco.c
+
+ifneq ($(STATIC_LINKING), 1)
+SOURCES_C += $(CORE_DIR)/libretro-common/file/retro_dirent.c
+endif
 
 ifeq ($(WITH_DYNAREC), arm)
 	#COMMONFLAGS += -DC_DYNREC -DC_TARGETCPU="ARMV7LE"
