--- a/Makefile.libretro
+++ b/Makefile.libretro
@@ -60,7 +60,10 @@ ifndef ($(UNIVERSAL))
 	CXXFLAGS += $(ARCHFLAGS)
 	LDFLAGS += $(ARCHFLAGS)
 endif
-else ifeq ($(platform), ios)
+
+# iOS
+else ifneq (,$(findstring ios,$(platform)))
+
    TARGET := $(TARGET_NAME)_libretro_ios.dylib
    COMMONFLAGS += -DHAVE_POSIX_MEMALIGN=1 -marm
    fpic = -fPIC
@@ -70,15 +73,16 @@ else ifeq ($(platform), ios)
 		IOSSDK := $(shell xcodebuild -version -sdk iphoneos Path)
 	endif
 
-   CC = clang -arch armv7 -isysroot $(IOSSDK)
-   CXX = clang++ -arch armv7 -isysroot $(IOSSDK)
+   CC = cc -arch armv7 -isysroot $(IOSSDK)
+   CXX = c++ -arch armv7 -isysroot $(IOSSDK)
 	COMMONFLAGS += -DIOS 
-	OSXVER = `sw_vers -productVersion | cut -d. -f 2`
-	OSX_LT_MAVERICKS = `(( $(OSXVER) <= 9)) && echo "YES"`
-	ifeq ($(OSX_LT_MAVERICKS),"YES")
-		CC += -miphoneos-version-min=5.0
-		COMMONFLAGS += -miphoneos-version-min=5.0
-	endif
+ifeq ($(platform),ios9)
+	CC += -miphoneos-version-min=8.0
+	COMMONFLAGS += -miphoneos-version-min=8.0
+else
+	CC += -miphoneos-version-min=5.0
+	COMMONFLAGS += -miphoneos-version-min=5.0
+endif
 else ifeq ($(platform), theos_ios)
 DEPLOYMENT_IOSVERSION = 5.0
 TARGET = iphone:latest:$(DEPLOYMENT_IOSVERSION)
