--- a/Makefile.libretro
+++ b/Makefile.libretro
@@ -157,11 +157,12 @@ else ifeq ($(platform), wii)
    CXX = $(DEVKITPPC)/bin/powerpc-eabi-g++$(EXE_EXT)
    AR = $(DEVKITPPC)/bin/powerpc-eabi-ar$(EXE_EXT)
    COMMONFLAGS += -DGEKKO -mrvl -mcpu=750 -meabi -mhard-float -D__POWERPC__ -D__ppc__ -DWORDS_BIGENDIAN=1
-	STATIC_LINKING = 1
+   STATIC_LINKING = 1
 
 else ifeq ($(platform), emscripten)
    TARGET := $(TARGET_NAME)_libretro_$(platform).bc
-	STATIC_LINKING = 1
+   STATIC_LINKING = 1
+   COMMONFLAGS += -DEMSCRIPTEN
 
 else
    CXXFLAGS += -mno-ms-bitfields
