--- a/Makefile.common
+++ b/Makefile.common
@@ -1,8 +1,10 @@
 LIBRETRO_COMM_DIR := $(CORE_DIR)/libretro-common
 
 INCFLAGS += -I$(CORE_DIR)/src \
+            -I$(CORE_DIR)/libretro \
 				-I$(LIBRETRO_COMM_DIR)/include \
-				-I$(CORE_DIR)/include
+				-I$(CORE_DIR)/include \
+            -I$(CORE_DIR)/src/gui/munt
 
 SOURCES_CXX := \
 	$(CORE_DIR)/src/cpu/callback.cpp \
@@ -112,7 +114,25 @@ SOURCES_CXX := \
 	$(CORE_DIR)/libretro/libretro.cpp \
 	$(CORE_DIR)/libretro/dos_gfx.cpp \
 	$(CORE_DIR)/libretro/mapper.cpp \
-	$(CORE_DIR)/libretro/mixer-retro.cpp
+	$(CORE_DIR)/libretro/mixer-retro.cpp \
+   $(CORE_DIR)/src/gui/munt/Analog.cpp \
+   $(CORE_DIR)/src/gui/munt/BReverbModel.cpp \
+   $(CORE_DIR)/src/gui/munt/File.cpp \
+   $(CORE_DIR)/src/gui/munt/FileStream.cpp \
+   $(CORE_DIR)/src/gui/munt/LA32Ramp.cpp \
+   $(CORE_DIR)/src/gui/munt/LA32WaveGenerator.cpp \
+   $(CORE_DIR)/src/gui/munt/MidiStreamParser.cpp \
+   $(CORE_DIR)/src/gui/munt/Part.cpp \
+   $(CORE_DIR)/src/gui/munt/Partial.cpp \
+   $(CORE_DIR)/src/gui/munt/PartialManager.cpp \
+   $(CORE_DIR)/src/gui/munt/Poly.cpp \
+   $(CORE_DIR)/src/gui/munt/ROMInfo.cpp \
+   $(CORE_DIR)/src/gui/munt/Synth.cpp \
+   $(CORE_DIR)/src/gui/munt/Tables.cpp \
+   $(CORE_DIR)/src/gui/munt/TVA.cpp \
+   $(CORE_DIR)/src/gui/munt/TVF.cpp \
+   $(CORE_DIR)/src/gui/munt/TVP.cpp \
+   $(CORE_DIR)/src/gui/munt/sha1/sha1.cpp
 
 SOURCES_C := $(LIBRETRO_COMM_DIR)/libco/libco.c
 
