--- a/Makefile.libretro
+++ b/Makefile.libretro
@@ -131,8 +131,9 @@ else ifeq ($(platform), vita)
 	CXX = arm-vita-eabi-g++$(EXE_EXT)
 	AR = arm-vita-eabi-ar$(EXE_EXT)
   COMMONFLAGS += -DVITA
-  COMMONFLAGS += -mfloat-abi=hard -ffast-math -fsingle-precision-constant
-  COMMONFLAGS += -mword-relocations -fno-short-enums
+  COMMONFLAGS += -mthumb -mcpu=cortex-a9 -mfloat-abi=hard -ftree-vectorize  -ffast-math -fsingle-precision-constant -funroll-loops
+  COMMONFLAGS += -mword-relocations
+  COMMONFLAGS +=  -fno-optimize-sibling-calls
 	STATIC_LINKING = 1
 
 # CTR
