--- a/Makefile.common
+++ b/Makefile.common
@@ -144,7 +144,7 @@ endif
 ifeq ($(WITH_DYNAREC), arm)
    COMMONFLAGS += -DC_DYNREC="1" -DC_TARGETCPU="ARMV7LE"
 else ifeq ($(WITH_DYNAREC), x86_64)
-   #COMMONFLAGS += -DC_DYNREC="1" -DC_TARGETCPU="X86_64" -DC_HAVE_MPROTECT
+   COMMONFLAGS += -DC_DYNREC="1" -DC_TARGETCPU="X86_64" -DC_HAVE_MPROTECT
 else ifeq ($(WITH_DYNAREC), x86)
    COMMONFLAGS += -DC_DYNREC="1" -DC_TARGETCPU="X86"
 endif
